include fonts and fix text alignment for checkbox and radio inputs in size l

--- a/scss/mixins/inputs.scss
+++ b/scss/mixins/inputs.scss
@@ -74,6 +74,7 @@
     & + label {
         font-size : $size;
         padding-left: 2 * $size;
+        padding-top: 3px;
 
         &:before {
             width: $size + $XS;
